--- a/de.gebit.integrity.jenkins/pom.xml
+++ b/de.gebit.integrity.jenkins/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.466</version><!-- which version of Jenkins is this plugin built against? -->
+    <version>1.580.1</version><!-- which version of Jenkins is this plugin built against? -->
   </parent>
 
   <groupId>de.gebit.integrity</groupId>
@@ -31,7 +31,15 @@
   <properties>
   	<sonar.exclusions>de/gebit/integrity/Messages.java</sonar.exclusions>
   </properties>
-    
+
+  <dependencies>
+	  <dependency>
+		  <groupId>org.jenkins-ci.plugins</groupId>
+		  <artifactId>junit</artifactId>
+		  <version>1.3</version>
+	  </dependency>
+  </dependencies>
+
   <!-- Override default Jenkins-CI repositories, since we currently don't want to release the plugin there yet -->
   <distributionManagement>
   	<repository>
