--- a/de.gebit.integrity.jenkins/pom.xml
+++ b/de.gebit.integrity.jenkins/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.580.1</version><!-- which version of Jenkins is this plugin built against? -->
+    <version>3.6</version>
   </parent>
 
   <groupId>de.gebit.integrity</groupId>
@@ -29,6 +29,8 @@
   </pluginRepositories>
   
   <properties>
+  	<jenkins.version>2.114</jenkins.version>
+  	<java.level>8</java.level>
   	<sonar.exclusions>de/gebit/integrity/Messages.java</sonar.exclusions>
   </properties>
 
@@ -36,8 +38,20 @@
 	  <dependency>
 		  <groupId>org.jenkins-ci.plugins</groupId>
 		  <artifactId>junit</artifactId>
-		  <version>1.3</version>
+		  <version>1.22</version>
 	  </dependency>
+	  
+	  <!-- dependencies on Jenkins Pipeline plugins -->
+	<dependency>
+		<groupId>org.jenkins-ci.plugins.workflow</groupId>
+		<artifactId>workflow-job</artifactId>
+		<version>2.17</version>
+	</dependency>
+	<dependency>
+		<groupId>org.jenkins-ci.plugins.workflow</groupId>
+		<artifactId>workflow-step-api</artifactId>
+		<version>2.14</version>
+	</dependency>
   </dependencies>
 
   <!-- Override default Jenkins-CI repositories, since we currently don't want to release the plugin there yet -->
@@ -152,6 +166,25 @@
   									</versionRange>
   									<goals>
   										<goal>generate</goal>
+  									</goals>
+  								</pluginExecutionFilter>
+  								<action>
+  									<ignore></ignore>
+  								</action>
+  							</pluginExecution>
+  							<pluginExecution>
+  								<pluginExecutionFilter>
+  									<groupId>
+  										org.apache.maven.plugins
+  									</groupId>
+  									<artifactId>
+  										maven-javadoc-plugin
+  									</artifactId>
+  									<versionRange>
+  										[2.10.4,)
+  									</versionRange>
+  									<goals>
+  										<goal>javadoc</goal>
   									</goals>
   								</pluginExecutionFilter>
   								<action>
