--- a/de.gebit.integrity.jenkins/pom.xml
+++ b/de.gebit.integrity.jenkins/pom.xml
@@ -83,6 +83,13 @@
 				<hpiName>${project.artifactId}-${project.version}</hpiName>
 			</configuration>
   		</plugin>
+		<plugin>
+    		<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-javadoc-plugin</artifactId>
+    		<configuration>
+        		<source>8</source>
+    		</configuration>
+		</plugin>
   	</plugins>
   	<pluginManagement>
   		<plugins>
