--- a/de.gebit.integrity.jenkins/pom.xml
+++ b/de.gebit.integrity.jenkins/pom.xml
@@ -29,9 +29,11 @@
   </pluginRepositories>
   
   <properties>
-  	<jenkins.version>2.138</jenkins.version>
+  	<jenkins.version>2.164</jenkins.version>
   	<java.level>8</java.level>
   	<sonar.exclusions>de/gebit/integrity/Messages.java</sonar.exclusions>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
